Updated header logo to avoid Chrome's jumping

--- a/src/mini/_navigation.scss
+++ b/src/mini/_navigation.scss
@@ -47,6 +47,8 @@ header {
 		@if $header-logo-padding != 0 {
 			padding: $header-logo-padding;
 		}
+		-webkit-transition: 0s opacity;
+				transition: 0s opacity;
 	}
 	// Link styling.
 	button, [type="button"],
